--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,32 @@ h1,h2,h3,h4 {
 
 }
 
+.Top {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: indigo;
+}
+
+.Top a {
+    float: left;
+    display: block;
+    color: cornflowerblue;
+    text-align: center; 
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: Verdana, Geneva, sans-serif;
+}
+
+.Top a:hover {
+    background: purple;
+    color: black;
+}
+
+.Main {
+    margin-top: 50px;
+}
 p {
     font-size : 1.25em;
     font-family: Verdana, Geneva, sans-serif;
